[build-system]
requires = ["setuptools>=61.2", "setuptools_scm[toml]>=3.4.1"]
build-backend = "setuptools.build_meta"

[project]
name = "recapturedocs"
authors = [
	{ name = "Jason R. Coombs", email = "jaraco@jaraco.com" },
]
description = "Library for RecaptureDocs.com"
readme = "README.rst"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.8"
dependencies = [
	"cherrypy >= 3.2.3",
	"genshi >= 0.6",
	"boto3",
	"PyPDF2",
	"keyring >= 0.7.1",
	"path",
	"docutils",
	"jaraco.modb >= 3.2",
	"pymongo >= 1.9",
	"httpagentparser >= 1.0.1",
	"dropbox >= 1.5",
	"newrelic",
	"jaraco.text",
	"jaraco.itertools",
	"jaraco.logging",
	"jaraco.collections",
	"jaraco.classes",
	"jaraco.functools>=1.2",
	"jaraco.email",
	"jaraco.mongodb",
]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/jaraco/recapturedocs"

[project.optional-dependencies]
test = [
	# upstream
	"pytest >= 6, != 8.1.*",

	# local
	"importlib_resources >= 1.1",
	"mock",
	"fabric",
	"jaraco.fabric",
	"keyring",
]

doc = [
	# upstream
	"sphinx >= 3.5",
	"jaraco.packaging >= 9.3",
	"rst.linker >= 1.9",
	"furo",
	"sphinx-lint",

	# local
]

check = [
	"pytest-checkdocs >= 2.4",
	"pytest-ruff >= 0.2.1; sys_platform != 'cygwin'",
]

cover = [
	"pytest-cov",
]

enabler = [
	"pytest-enabler >= 2.2",
]

type = [
	# upstream
	"pytest-mypy",

	# local
	"types-requests",
	"types-boto",
	"types-docutils",
	"types-setuptools",
	"types-mock",
]


[project.scripts]
recapture-docs = "recapturedocs.server:handle_command_line"


[tool.setuptools_scm]


[tool.pytest-enabler.mypy]
# Disabled due to jaraco/skeleton#143
