[metadata]
license_file = LICENSE
name = recapturedocs
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = Library for RecaptureDocs.com
long_description = file:README.rst
url = https://github.com/jaraco/recapturedocs
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
packages = find:
include_package_data = true
python_requires = >=3.6
install_requires =
	cherrypy >= 3.2.3
	genshi >= 0.6
	boto >= 2.4
	PyPDF2
	keyring >= 0.7.1
	path.py
	docutils
	jaraco.modb >= 3.2
	pymongo >= 1.9
	httpagentparser >= 1.0.1
	dropbox >= 1.5
	newrelic
	six
	jaraco.text
	jaraco.itertools
	jaraco.logging
	jaraco.collections
	jaraco.classes
	jaraco.functools>=1.2
	jaraco.email
	jaraco.mongodb
setup_requires = setuptools_scm[toml] >= 3.4.1

[options.extras_require]
testing =
	# upstream
	pytest >= 3.5, !=3.7.3
	pytest-checkdocs >= 1.2.3
	pytest-flake8
	pytest-black-multipy
	pytest-cov

	# local

docs =
	# upstream
	sphinx
	jaraco.packaging >= 3.2
	rst.linker >= 1.9

	# local

[options.entry_points]
console_scripts =
	recapture-docs = recapturedocs.server:handle_command_line
