[metadata]
name = recapturedocs
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = Library for RecaptureDocs.com
long_description = file:README.rst
url = https://github.com/jaraco/recapturedocs
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
include_package_data = true
python_requires = >=3.8
install_requires =
	cherrypy >= 3.2.3
	genshi >= 0.6
	boto3
	PyPDF2
	keyring >= 0.7.1
	path
	docutils
	jaraco.modb >= 3.2
	pymongo >= 1.9
	httpagentparser >= 1.0.1
	dropbox >= 1.5
	newrelic
	jaraco.text
	jaraco.itertools
	jaraco.logging
	jaraco.collections
	jaraco.classes
	jaraco.functools>=1.2
	jaraco.email
	jaraco.mongodb

[options.extras_require]
testing =
	# upstream
	pytest >= 6, != 8.1.1
	pytest-checkdocs >= 2.4
	pytest-cov
	pytest-mypy
	pytest-enabler >= 2.2
	pytest-ruff >= 0.2.1

	# local
	importlib_resources >= 1.1
	mock
	fabric
	jaraco.fabric
	keyring
	types-requests
	types-boto
	types-docutils
	types-setuptools
	types-mock

docs =
	# upstream
	sphinx >= 3.5
	jaraco.packaging >= 9.3
	rst.linker >= 1.9
	furo
	sphinx-lint

	# local

[options.entry_points]
console_scripts =
	recapture-docs = recapturedocs.server:handle_command_line
